--- a/frontend/src/css/mixins/attribute.css
+++ b/frontend/src/css/mixins/attribute.css
@@ -5,7 +5,7 @@
     .sub-selector-content {
       width: 330px !important;
       position: relative;
-      left: -1px;
+      border-left: 0;
     }
   }
   .attribute-action {
