feature: 用户组、授权边界、管理空间、自定义权限支持批量聚合属性条件

--- a/frontend/src/css/mixins/iam-add-action-slider.css
+++ b/frontend/src/css/mixins/iam-add-action-slider.css
@@ -8,7 +8,7 @@
     display: flex;
     justify-content: flex-start;
     position: relative;
-    min-height: calc(100vh - 114px);
+    min-height: calc(100vh - 100px);
     .left-wrapper {
       position: relative;
       flex: 0 0 240px;
@@ -250,6 +250,14 @@
           width: 120px;
         }
       }
+    }
+  }
+  .add-action-slider-footer {
+    padding: 0 30px;
+    font-size: 0;
+    .bk-button {
+      min-width: 88px;
+      margin-right: 8px;
     }
   }
 }
